syntax = "proto3";

package kessel.inventory.v1beta2;

import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message ConsistencyToken {
  string token = 1 [(buf.validate.field).string.min_len = 1];
}